objects/RelatedOpportunity__c.object
<CustomObject>
    <description>SFDC1-863; Related Opportunity Object is a Junction Object between Opportunities and Meeting Note</description>
    <fields>
        <fullName>Annualised1stYearAmount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualised 1st Year Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <formula>MeetingNote__r.CreatedBy.FirstName +&quot; &quot;+ MeetingNote__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>MeetingNote__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>Created as part for migration exercise to store unique identifier for legacy records</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Id for legacy records</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>Created as part of data migration go live preparation.</description>
        <externalId>true</externalId>
        <inlineHelpText>Id from the legacy system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>Created as part of migration exercise to identify the system to which the legacy records relates with</description>
        <inlineHelpText>System from which the record was migrated</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MeetingLink__c</fullName>
        <formula>IF( ISBLANK( MeetingNote__r.RelatedEventId__c ), &quot;&quot; , HYPERLINK( &quot;/lightning/r/Event/&quot;&amp;MeetingNote__r.RelatedEventId__c&amp;&quot;/view&quot;,MeetingNote__r.Name ))</formula>
        <label>Meeting Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeetingNote__c</fullName>
        <label>Meeting Note</label>
        <referenceTo>MeetingNote__c</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>RelatedOpportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Only open opportunities can be linked to a meeting.</errorMessage>
            <filterItems>
                <field>Opportunity.IsClosed</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>RelatedOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerAlias__c</fullName>
        <formula>Opportunity__r.Owner.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDRelOpp__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>RoP{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID RelOpp</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When__c</fullName>
        <formula>MeetingNote__r.StartDateTime__c</formula>
        <label>When</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Where__c</fullName>
        <formula>MeetingNote__r.Where__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Where</label>
        <type>Text</type>
    </fields>
    <label>Related Opportunity</label>
    <nameField>
        <displayFormat>RO-{000000000}</displayFormat>
        <label>Related Opportunity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>